<resources>
    <string name="app_name">Bak Bak</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Log in to your Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there! I am using this app</string>
    <string name="display_name">Display Name</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="users_default_status">Users default status</string>
    <string name="single_user_display_name">Display Name</string>
    <string name="profile_display_name">Display Name</string>
    <string name="prfile_user_status">Current User Status</string>
    <string name="profile_total_friends">Total Friends</string>
    <string name="profile_send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend request</string>
</resources>
