<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/profileImage_background"
        android:backgroundTint="@color/profileImage_background"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="252dp"
        android:text="@string/profile_display_name"
        android:textColor="@android:color/background_light"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="244dp"
        android:text="@string/prfile_user_status"
        android:textColor="@android:color/background_light"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:text="@string/profile_total_friends"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/profile_send_friend_request"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/profile_deny_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/background_light" />

</RelativeLayout>